--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "next": "14.1.1",
     "react": "^18",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "react-typed": "^2.0.12",
     "tailwind-merge": "^2.2.1",
@@ -31,6 +33,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
+    "date-fns": "^3.6.0",
     "eslint": "^8",
     "eslint-config-next": "14.1.1",
     "postcss": "^8",
