--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@tanstack/react-table": "^8.15.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "input-otp": "^1.2.4",
     "next": "14.1.1",
     "react": "^18",
     "react-day-picker": "^8.10.0",
