--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
+    "framer-motion": "^11.1.7",
     "input-otp": "^1.2.4",
     "next": "14.1.1",
     "react": "^18",
