--- a/package.json
+++ b/package.json
@@ -40,10 +40,12 @@
     "framer-motion": "^11.1.7",
     "input-otp": "^1.2.4",
     "next": "14.1.1",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "react-hook-form": "^7.51.2",
+    "react-toastify": "^10.0.5",
     "react-typed": "^2.0.12",
     "recharts": "^2.12.3",
     "tailwind-merge": "^2.2.1",
