--- a/package.json
+++ b/package.json
@@ -39,12 +39,14 @@
     "cmdk": "^1.0.0",
     "framer-motion": "^11.1.7",
     "input-otp": "^1.2.4",
+    "lucide-react": "^0.378.0",
     "next": "14.1.1",
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "react-hook-form": "^7.51.2",
+    "react-timeago": "^7.2.0",
     "react-toastify": "^10.0.5",
     "react-typed": "^2.0.12",
     "recharts": "^2.12.3",
