--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@reduxjs/toolkit": "^2.2.5",
     "@tanstack/react-table": "^8.15.3",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
@@ -46,10 +48,14 @@
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "react-hook-form": "^7.51.2",
+    "react-redux": "^9.1.2",
     "react-timeago": "^7.2.0",
     "react-toastify": "^10.0.5",
     "react-typed": "^2.0.12",
     "recharts": "^2.12.3",
+    "redux": "^5.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^3.1.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.0",
