--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@emotion/styled": "^11.11.5",
     "@headlessui/react": "^1.7.19",
     "@heroicons/react": "^2.1.1",
-    "@hookform/resolvers": "^3.3.4",
+    "@hookform/resolvers": "^3.5.0",
     "@mui/icons-material": "^5.15.11",
     "@mui/lab": "^5.0.0-alpha.169",
     "@mui/material": "^5.15.14",
@@ -47,7 +47,7 @@
     "react": "^18",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
-    "react-hook-form": "^7.51.2",
+    "react-hook-form": "^7.51.5",
     "react-redux": "^9.1.2",
     "react-timeago": "^7.2.0",
     "react-toastify": "^10.0.5",
@@ -56,10 +56,11 @@
     "redux": "^5.0.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^3.1.0",
+    "socket.io-client": "^4.7.5",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.0",
-    "zod": "^3.22.4"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
