--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@headlessui/react": "^1.7.19",
@@ -39,12 +41,14 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
+    "emoji-mart": "^5.6.0",
     "framer-motion": "^11.1.7",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.378.0",
     "next": "14.1.1",
     "next-auth": "^4.24.7",
     "react": "^18",
+    "react-datepicker": "^6.9.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
