--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
+    "embla-carousel-react": "^8.1.5",
     "emoji-mart": "^5.6.0",
     "framer-motion": "^11.1.7",
     "input-otp": "^1.2.4",
