--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
+    "react-intersection-observer": "^9.10.3",
     "react-redux": "^9.1.2",
     "react-timeago": "^7.2.0",
     "react-toastify": "^10.0.5",
