--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-datepicker": "^6.9.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.51.5",
     "react-intersection-observer": "^9.10.3",
     "react-redux": "^9.1.2",
